remove permsize option